# ChangeLog for genkernel
# Copyright 2006-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> genkernel:
  Switch back to building kernel first
  Optionally build the kernel a second time if we're integrating the initramfs

  14 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org> alpha/modules_load,
  genkernel, ia64/modules_load, mips/modules_load, parisc/modules_load,
  parisc64/modules_load, ppc/modules_load, ppc64/modules_load,
  sparc/modules_load, sparc64/modules_load, um/modules_load,
  x86/modules_load, x86_64/modules_load:
  Clean up the modules_load files and add qla2xxx. This is genkernel
  3.4.10_pre6 for testing.

  13 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> gen_initramfs.sh:
  Stick CONFIG_INITRAMFS_ROOT_GID in the .config, too

  13 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> gen_initramfs.sh:
  Remove existing CONFIG_INITRAMFS_SOURCE line and write new one as well as
  CONFIG_INITRAMFS_ROOT_UID line

  13 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> gen_initramfs.sh:
  Change sed delimeter

  13 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> gen_initramfs.sh:
  We should edit the copy of the kconfig instead of the source file

  13 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> gen_initramfs.sh,
  genkernel:
  Instead of copying the initramfs into the kernel tree, we now sed the
  kconfig to point CONFIG_INITRAMFS_SOURCE to the generated image

  13 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> sparc64/modules_load:
  Add scsi_wait_scan to sparc64's MODULES_SCSI

  13 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> generic/linuxrc:
  Add a check after mounting NEW_ROOT to see if /dev exists and /sbin/init is
  executable before moving on

  13 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> gen_initramfs.sh:
  Change the location we copy the intiramfs to for integrated initramfs

  13 Mar 2008; Andrew Gaffney <agaffney@gentoo.org> generic/linuxrc: